--- a/index.html
+++ b/index.html
@@ -232,191 +232,191 @@
             </tr>
           </thead>
             <tbody>
-                <tr class="not-ready" data-test="let,const" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="let,const" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2"><code>let</code> and <code>const</code></td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="class,super" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="class,super" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2"><code>class</code> and <code>super</code></td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="shorthand methods,shorthand properties" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="shorthand methods,shorthand properties" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Syntactic sugar for property and method declarations</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="arrow functions" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="arrow functions" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Arrow functions</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="Promise" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="Promise" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Promises</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="Proxy" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="Proxy" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Proxy objects</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="Reflect" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="Reflect" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Reflection methods</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="spread array (...) operator,spread call (...) operator,string spreading" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="spread array (...) operator,spread call (...) operator,string spreading" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">"Spreading", otherwise known as splicing, arrays and strings into other arrays and function calls</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                <tr class="not-ready" data-test="RegExp &quot;y&quot; flag" data-href="./narrated-walkthroughs/.html">
+                <tr class="not-ready" data-test="RegExp &quot;y&quot; flag" data-href="./narrated-walkthroughs/redirect.html">
                   <td colspan="2">Sticky regular expressions</td>
                   <td></td>
                 </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="Map,Set" data-href="./narrated-walkthroughs/Native non-Array collections.html">
+                    <tr class="not-ready" data-test="Map,Set" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="4">Collections</th>
                       <td>Native non-Array collections</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="WeakMap,WeakSet" data-href="./narrated-walkthroughs/Weak native non-Array collections.html">
+                    <tr class="not-ready" data-test="WeakMap,WeakSet" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Weak native non-Array collections</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="typed arrays" data-href="./narrated-walkthroughs/Strongly-typed Arrays.html">
+                    <tr class="not-ready" data-test="typed arrays" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Strongly-typed Arrays</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="typed arrays (DataView)" data-href="./narrated-walkthroughs/Views into strongly-typed Arrays.html">
+                    <tr class="not-ready" data-test="typed arrays (DataView)" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Views into strongly-typed Arrays</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="destructuring" data-href="./narrated-walkthroughs/Complex direct assignments.html">
+                    <tr class="not-ready" data-test="destructuring" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="4">Destructuring</th>
                       <td>Complex direct assignments</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="destructuring defaults" data-href="./narrated-walkthroughs/Complex assignments of default parameters.html">
+                    <tr class="not-ready" data-test="destructuring defaults" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Complex assignments of default parameters</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="destructuring parameters" data-href="./narrated-walkthroughs/Complex assignments of parameter values.html">
+                    <tr class="not-ready" data-test="destructuring parameters" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Complex assignments of parameter values</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="destructuring rest" data-href="./narrated-walkthroughs/Complex assignment to a spread.html">
+                    <tr class="not-ready" data-test="destructuring rest" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Complex assignment to a spread</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="for..of loops" data-href="./narrated-walkthroughs/&lt;code&gt;for..of&lt;/code&gt; loops (instead of &lt;code&gt;for..in&lt;/code&gt;).html">
+                    <tr class="not-ready" data-test="for..of loops" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="2">Flow control</th>
                       <td><code>for..of</code> loops (instead of <code>for..in</code>)</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="generators (yield)" data-href="./narrated-walkthroughs/Generator functions (and the &lt;code&gt;yield&lt;/code&gt; keyword).html">
+                    <tr class="not-ready" data-test="generators (yield)" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Generator functions (and the <code>yield</code> keyword)</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="Function.prototype.toMethod" data-href="./narrated-walkthroughs/Turning functions into methods.html">
+                    <tr class="not-ready" data-test="Function.prototype.toMethod" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="6">Functions</th>
                       <td>Turning functions into methods</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="default function parameters" data-href="./narrated-walkthroughs/Default function parameters.html">
+                    <tr class="not-ready" data-test="default function parameters" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Default function parameters</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="rest parameters" data-href="./narrated-walkthroughs/Binding the remaining parameters of a function to a single variable.html">
+                    <tr class="not-ready" data-test="rest parameters" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Binding the remaining parameters of a function to a single variable</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="function &quot;name&quot; property" data-href="./narrated-walkthroughs/Name property of functions.html">
+                    <tr class="not-ready" data-test="function &quot;name&quot; property" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Name property of functions</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="proper tail calls (tail call optimisation)" data-href="./narrated-walkthroughs/Tail-call recursion.html">
+                    <tr class="not-ready" data-test="proper tail calls (tail call optimisation)" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Tail-call recursion</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="block-level function declaration" data-href="./narrated-walkthroughs/Block-level scoping of function declarations.html">
+                    <tr class="not-ready" data-test="block-level function declaration" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Block-level scoping of function declarations</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="computed properties" data-href="./narrated-walkthroughs/Computed properties.html">
+                    <tr class="not-ready" data-test="computed properties" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="4">Metaprogramming</th>
                       <td>Computed properties</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="Object.prototype.__proto__,__proto__ in object literals" data-href="./narrated-walkthroughs/Getter and setter prototype property.html">
+                    <tr class="not-ready" data-test="Object.prototype.__proto__,__proto__ in object literals" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Getter and setter prototype property</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="Object.assign" data-href="./narrated-walkthroughs/Mixin properties of other objects.html">
+                    <tr class="not-ready" data-test="Object.assign" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Mixin properties of other objects</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="Object.setPrototypeOf" data-href="./narrated-walkthroughs/Use a function to set the prototype of an object.html">
+                    <tr class="not-ready" data-test="Object.setPrototypeOf" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Use a function to set the prototype of an object</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="modules" data-href="./narrated-walkthroughs/&lt;code&gt;export&lt;/code&gt; keyword.html">
+                    <tr class="not-ready" data-test="modules" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="2">Modules</th>
                       <td><code>export</code> keyword</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="Reflect.Loader" data-href="./narrated-walkthroughs/Module loader.html">
+                    <tr class="not-ready" data-test="Reflect.Loader" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Module loader</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="template strings" data-href="./narrated-walkthroughs/Template strings.html">
+                    <tr class="not-ready" data-test="template strings" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="4">String handling</th>
                       <td>Template strings</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="tagged template strings" data-href="./narrated-walkthroughs/Destructuring template strings.html">
+                    <tr class="not-ready" data-test="tagged template strings" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Destructuring template strings</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="String.prototype.repeat" data-href="./narrated-walkthroughs/New string from repeating a single string.html">
+                    <tr class="not-ready" data-test="String.prototype.repeat" data-href="./narrated-walkthroughs/redirect.html">
                       <td>New string from repeating a single string</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="String.raw" data-href="./narrated-walkthroughs/Programmatic substitution in template strings.html">
+                    <tr class="not-ready" data-test="String.raw" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Programmatic substitution in template strings</td>
                       <td></td>
                     </tr>
             </tbody>
             <tbody>
-                    <tr class="not-ready" data-test="Global symbol registry,Symbol,Object.getOwnPropertySymbols" data-href="./narrated-walkthroughs/Simple symbols as properties.html">
+                    <tr class="not-ready" data-test="Global symbol registry,Symbol,Object.getOwnPropertySymbols" data-href="./narrated-walkthroughs/redirect.html">
                       <th rowspan="2">Symbols</th>
                       <td>Simple symbols as properties</td>
                       <td></td>
                     </tr>
-                    <tr class="not-ready" data-test="Symbol.hasInstance,Symbol.isConcatSpreadable,Symbol.isRegExp,Symbol.iterator,Symbol.toPrimitive,Symbol.toStringTag,Symbol.unscopables" data-href="./narrated-walkthroughs/Advanced symbols for conversion.html">
+                    <tr class="not-ready" data-test="Symbol.hasInstance,Symbol.isConcatSpreadable,Symbol.isRegExp,Symbol.iterator,Symbol.toPrimitive,Symbol.toStringTag,Symbol.unscopables" data-href="./narrated-walkthroughs/redirect.html">
                       <td>Advanced symbols for conversion</td>
                       <td></td>
                     </tr>
