Loading tests in nice Firefox script 1.7 version.

--- a/simple-walkthroughs/RegExp.prototype.match.html
+++ b/simple-walkthroughs/RegExp.prototype.match.html
@@ -54,6 +54,7 @@
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('RegExp.prototype.match'); });</script>
   </body>
