--- a/simple-walkthroughs/Array.from.html
+++ b/simple-walkthroughs/Array.from.html
@@ -76,6 +76,7 @@ new_way(1, 2, 3, 4, 5);</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Array.from'); });</script>
   </body>
