--- a/simple-walkthroughs/Array.of.html
+++ b/simple-walkthroughs/Array.of.html
@@ -84,6 +84,7 @@ console.log(fake.constructionLength);</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Array.of'); });</script>
   </body>
