--- a/simple-walkthroughs/Math.expm1.html
+++ b/simple-walkthroughs/Math.expm1.html
@@ -65,6 +65,7 @@ console.log(Math.expm1(-.00001));</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Math.expm1'); });</script>
   </body>
