--- a/simple-walkthroughs/Math.log10.html
+++ b/simple-walkthroughs/Math.log10.html
@@ -63,6 +63,7 @@ console.log(Math.log10(Number.POSITIVE_INFINITY));</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Math.log10'); });</script>
   </body>
