--- a/simple-walkthroughs/Math.log1p.html
+++ b/simple-walkthroughs/Math.log1p.html
@@ -60,6 +60,7 @@ console.log(Math.log1p(0.000001));</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Math.log1p'); });</script>
   </body>
