--- a/simple-walkthroughs/RegExp.u.flag.html
+++ b/simple-walkthroughs/RegExp.u.flag.html
@@ -79,6 +79,7 @@ console.log(s.match(/I got the . on me!/u));</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('RegExp "u" flag'); });</script>
   </body>
