--- a/simple-walkthroughs/String.prototype.normalize.html
+++ b/simple-walkthroughs/String.prototype.normalize.html
@@ -94,6 +94,7 @@ console.log(nfkd, nfkd.length, nfkd.codePointAt(0));
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('String.prototype.normalize'); });</script>
   </body>
