--- a/simple-walkthroughs/Unicode.code.point.escapes.html
+++ b/simple-walkthroughs/Unicode.code.point.escapes.html
@@ -63,6 +63,7 @@ console.log('\uD83D\uDCA9', '\u{1F4A9}');</div>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
+    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
     <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Unicode code point escapes'); });</script>
   </body>
