Make the let and const walkthrough.

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </tr>
           </thead>
             <tbody>
-                <tr class="not-ready" data-test="let,const" data-href="./narrated-walkthroughs/redirect.html">
+                <tr class="" data-test="let,const" data-href="./narrated-walkthroughs/let-and-const.html">
                   <td colspan="2"><code>let</code> and <code>const</code></td>
                   <td></td>
                 </tr>
