--- a/simple-walkthroughs/Math.hypot.html
+++ b/simple-walkthroughs/Math.hypot.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="../assets/global.css">
   </head>
   <body data-asset-location="../simple-walkthrough-assets/">
-    <div id="loader">
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
-        <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946 s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634 c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"></path>
-        <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0 C22.32,8.481,24.301,9.057,26.013,10.047z">
-          <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
-        </path>
-      </svg>
-    </div>
-    <div id="workspace" class="pure-g">
-      <div class="pure-u-1-2">
-        <form class="pure-form unsubmitable">
-          <fieldset>
-            <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-cog"></span> Evaluate (⌘+E)</button>
-          </fieldset>
-        </form>
-        <div class="editor-holder">
-          <div id="editor">// Now that we need to use ECMAscript for
+  <div id="loader">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+    <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946 s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634 c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"></path>
+    <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0 C22.32,8.481,24.301,9.057,26.013,10.047z">
+    <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
+    </path>
+    </svg>
+  </div>
+  <div id="workspace" class="pure-g">
+    <div class="pure-u-1-2">
+      <form class="pure-form unsubmitable">
+        <fieldset>
+          <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-cog"></span> Evaluate (⌘+E)</button>
+        </fieldset>
+      </form>
+      <div class="editor-holder">
+        <div id="editor">// Now that we need to use ECMAscript for
 // graphics, both 2D and 3D, it would make sweet
 // sense to have a fast implementation of 
 // calculating the square root of the sum of two
@@ -34,36 +34,61 @@
 // distances and geometry exams.
 console.log(Math.hypot(1, 1), Math.sqrt(2));
 console.log(Math.hypot(3, 4));</div>
-        </div>
-      </div>
-      <div class="pure-u-1-2">
-        <form class="pure-form unsubmitable">
-          <fieldset>
-            <button id="clear-console" class="pure-button pure-button-primary"><span class="fa fa-circle-o"></span> Clear console (ESC)</button>
-          </fieldset>
-        </form>
-        <div id="console"></div>
       </div>
     </div>
+    <div class="pure-u-1-2">
+      <div class="pure-g">
+        <div class="pure-u-1-2">
+          <form class="pure-form unsubmitable">
+            <fieldset>
+              <button id="clear-console" class="pure-button pure-button-primary" disabled><span class="fa fa-circle-o"></span> Clear console (ESC)</button>
+            </fieldset>
+          </form>
+        </div>
+        <div class="pure-u-1-2">
+          <form class="pure-form unsubmitable">
+            <fieldset class="tool-button">
+              <button id="feedback" class="pure-button button-success">Feedback</button>
+              <div id="feedback-panel" class="feedback-panel">
+                <div class="pure-g">
+                  <div class="pure-u-1-4 center">
+                    <p><i class="disabled fa fa-thumbs-o-up"></i></p>
+                    <p><i class="disabled fa fa-thumbs-o-down"></i></p>
+                  </div>
+                  <div class="pure-u-3-4">
+                    <textarea id="comments" name="comments" class="feedback-comments" disabled></textarea>
+                    <div class="tool-button">
+                      <button class="pure-button button-success" disabled>Send</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      <div id="console"></div>
+    </div>
+  </div>
 
-    <form class="pure-form" method="get" action="../index.html">
-      <footer>
-        <button class="pure-button">Back to table of contents</button>
-        Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>
-        licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC A-NC-SA 4.0 International License</a>.
-      </footer>
-    </form>
+  <form class="pure-form" method="get" action="../index.html">
+  <footer>
+    <button class="pure-button">Back to table of contents</button>
+    Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>
+    licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC A-NC-SA 4.0 International License</a>.
+  </footer>
+  </form>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
 
-    <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.74/traceur.min.js"></script>
-    <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.10.0/dist/es6-module-loader.js"></script>
-    <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
-    <script src="../assets/simple-walkthrough.system.config.js"></script>
+  <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.74/traceur.min.js"></script>
+  <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.10.0/dist/es6-module-loader.js"></script>
+  <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
+  <script src="../assets/simple-walkthrough.system.config.js"></script>
 
-    <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
-    <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
-    <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Math.hypot'); });</script>
+  <script type="application/javascript;version=1.7" src="../assets/tests.js"></script>
+  <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
+  <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('Math.hypot'); });</script>
   </body>
 </html>
